--- a/templates/shared/navbar.html
+++ b/templates/shared/navbar.html
@@ -2,7 +2,10 @@
 
 <nav class="navbar fixed-top navbar-expand-lg principal navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">
+      <img class="logo" src="{{ url_for('static', filename='img/logo.png') }}" alt="Home Office">
+      <span class="texto">Home Office</span>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
