--- a/templates/shared/navbar.html
+++ b/templates/shared/navbar.html
@@ -58,7 +58,8 @@
         <button class="dropbtn"><i class="fa-solid fa-users-gear"></i>  Configurações</button>
         <div class="dropdown-content">
           <a href="#" class="closebtn" onclick="print()"><i class="fa-solid fa-print"></i> Imprimir</a>
-          <a href="{{ url_for('main.novoCurriculo') }}"><i class="fa-solid fa-user-plus"></i> Novo Curriculo</a>
+          <!-- <a href="{{ url_for('main.novoCurriculo') }}"><i class="fa-solid fa-user-plus"></i> Novo Curriculo</a> -->
+          <a href="#"><i class="fa-solid fa-user-plus"></i> Novo Curriculo</a>
           <a href="#"><i class="fa-solid fa-users-line"></i> Lista de Curriculos</a>
         </div>
       </div>
