--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 <link
   rel="stylesheet"
   id="cssid"
-  href="{{ url_for('static', filename='css/anime.css') }}"
+  href="{{ url_for('static', filename='css/classico.css') }}"
 />
 {% endblock %} 
 
