--- a/templates/curriculo.html
+++ b/templates/curriculo.html
@@ -11,7 +11,7 @@
   <!-- Info: Pessoal -->
   <div class="col-4 pessoal p-0">
 
-    <form action="{{ url_for('main.inserirCurriculo') }}" method="post">
+    <form action="{{ url_for('inserirCurriculo') }}" method="post">
 
       <!-- Info: Imagem -->
       <div class="image">
