--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -148,31 +148,91 @@
       <div class="descricao">
         <ul class="check-list">
           <li>
-            <i class="fas fa-check fa-xs"></i>Modelagem em análise orientada a
+            <img
+              src="{{url_for('static', filename='img/gauges/5.gauges.png')}}"
+              class="img-fluid"
+              alt="excelente"
+            />
+            <i class="fas fa-check fa-xs check"></i>Windows e Linux
+          </li>
+          <li>
+            <img
+              src="{{url_for('static', filename='img/gauges/4.gauges.png')}}"
+              class="img-fluid"
+              alt="muito bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Shell script, Powershell, Bash
+          </li>
+          <li>
+            <img
+              src="{{url_for('static', filename='img/gauges/4.gauges.png')}}"
+              class="img-fluid"
+              alt="muito bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Modelagem em análise orientada a
             objetos com UML
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Asp.Net MVC, PHP Laravel, Ajax,
+            <img
+              src="{{url_for('static', filename='img/gauges/3.gauges.png')}}"
+              class="img-fluid"
+              alt="bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Docker, NodeJS, MongoDB,
+
+          </li>
+          <li>
+            <img
+              src="{{url_for('static', filename='img/gauges/3.gauges.png')}}"
+              class="img-fluid"
+              alt="bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Web API, MVC, PHP Laravel, Ajax,
             T-SQL, Bootstrap, ArgularJS, jQuery
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Visual Studio, SQL Server, MySQL,
-            Enterprise Architect, VS Code
+            <img
+              src="{{url_for('static', filename='img/gauges/4.gauges.png')}}"
+              class="img-fluid"
+              alt="muito bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>C, C#, SQL Server, MySQL,
+            Enterprise Architect
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Especialista em front-end, UX
+            <img
+              src="{{url_for('static', filename='img/gauges/5.gauges.png')}}"
+              class="img-fluid"
+              alt="excelente"
+            />
+            <i class="fas fa-check fa-xs check"></i>Especialista em front-end, UX
             Design
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Atuação em ambientes de
-            desenvolvimento ágil
+            <img
+              src="{{url_for('static', filename='img/gauges/4.gauges.png')}}"
+              class="img-fluid"
+              alt="muito bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Atuação em ambientes de
+            desenvolvimento ágil, Scrum
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Desenvolvimento de documentação de
+            <img
+              src="{{url_for('static', filename='img/gauges/5.gauges.png')}}"
+              class="img-fluid"
+              alt="excelente"
+            />
+            <i class="fas fa-check fa-xs check"></i>Desenvolvimento de documentação de
             sistemas
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Elaboração e desenvolvimento de
+            <img
+              src="{{url_for('static', filename='img/gauges/5.gauges.png')}}"
+              class="img-fluid"
+              alt="excelente"
+            />
+            <i class="fas fa-check fa-xs check"></i>Elaboração e desenvolvimento de
             modelagem de dados de projeto e conceitual
           </li>
         </ul>
