--- a/app/templates/curriculo/curriculo.html
+++ b/app/templates/curriculo/curriculo.html
@@ -3,12 +3,12 @@
 <link
   rel="stylesheet"
   id="cssid"
-  href="{{ url_for('static', filename='css/classico.css') }}"
+  href=""
 />
 {% endblock %} 
 
 {% block content %}
-<div class="row  mx-auto a4">
+<div class="row mx-auto a4">
   <!-- Info: Pessoal -->
   <div class="col-4 pessoal p-0">
     <!-- Info: Imagem -->
@@ -148,31 +148,91 @@
       <div class="descricao">
         <ul class="check-list">
           <li>
-            <i class="fas fa-check fa-xs"></i>Modelagem em análise orientada a
+            <img
+              src="{{url_for('static', filename='img/gauges/5.gauges.png')}}"
+              class="img-fluid"
+              alt="excelente"
+            />
+            <i class="fas fa-check fa-xs check"></i>Windows e Linux
+          </li>
+          <li>
+            <img
+              src="{{url_for('static', filename='img/gauges/4.gauges.png')}}"
+              class="img-fluid"
+              alt="muito bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Shell script, Powershell, Bash
+          </li>
+          <li>
+            <img
+              src="{{url_for('static', filename='img/gauges/4.gauges.png')}}"
+              class="img-fluid"
+              alt="muito bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Modelagem em análise orientada a
             objetos com UML
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Asp.Net MVC, PHP Laravel, Ajax,
+            <img
+              src="{{url_for('static', filename='img/gauges/3.gauges.png')}}"
+              class="img-fluid"
+              alt="bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Docker, NodeJS, MongoDB,
+
+          </li>
+          <li>
+            <img
+              src="{{url_for('static', filename='img/gauges/3.gauges.png')}}"
+              class="img-fluid"
+              alt="bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Web API, MVC, PHP Laravel, Ajax,
             T-SQL, Bootstrap, ArgularJS, jQuery
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Visual Studio, SQL Server, MySQL,
-            Enterprise Architect, VS Code
+            <img
+              src="{{url_for('static', filename='img/gauges/4.gauges.png')}}"
+              class="img-fluid"
+              alt="muito bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>C, C#, SQL Server, MySQL,
+            Enterprise Architect
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Especialista em front-end, UX
+            <img
+              src="{{url_for('static', filename='img/gauges/5.gauges.png')}}"
+              class="img-fluid"
+              alt="excelente"
+            />
+            <i class="fas fa-check fa-xs check"></i>Especialista em front-end, UX
             Design
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Atuação em ambientes de
-            desenvolvimento ágil
+            <img
+              src="{{url_for('static', filename='img/gauges/4.gauges.png')}}"
+              class="img-fluid"
+              alt="muito bom"
+            />
+            <i class="fas fa-check fa-xs check"></i>Atuação em ambientes de
+            desenvolvimento ágil, Scrum
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Desenvolvimento de documentação de
+            <img
+              src="{{url_for('static', filename='img/gauges/5.gauges.png')}}"
+              class="img-fluid"
+              alt="excelente"
+            />
+            <i class="fas fa-check fa-xs check"></i>Desenvolvimento de documentação de
             sistemas
           </li>
           <li>
-            <i class="fas fa-check fa-xs"></i>Elaboração e desenvolvimento de
+            <img
+              src="{{url_for('static', filename='img/gauges/5.gauges.png')}}"
+              class="img-fluid"
+              alt="excelente"
+            />
+            <i class="fas fa-check fa-xs check"></i>Elaboração e desenvolvimento de
             modelagem de dados de projeto e conceitual
           </li>
         </ul>
@@ -312,53 +372,9 @@
     </div>
   </div>
 
-
-
 </div>
 {% endblock %} 
 
 {% block js %}
-<script>
-  function troca_css(cssFile) {
-    document.getElementById("cssid").setAttribute("href", cssFile);
-  }
 
-  function print() {
-    $("#a4").print({
-      globalStyles: true,
-      mediaPrint: false,
-      stylesheet: "../static/css/print.css",
-      noPrintSelector: ".no-print",
-      iframe: true,
-      append: null,
-      prepend: null,
-      manuallyCopyFormValues: true,
-      deferred: $.Deferred(),
-      timeout: 750,
-      title: null,
-      doctype: "<!doctype html>",
-    });
-  }
-
-  $(document).on("scroll", function () {
-    if ($(window).scrollTop() > 100) {
-      $(".smoothscroll-top").addClass("show");
-    } else {
-      $(".smoothscroll-top").removeClass("show");
-    }
-  });
-  $(".smoothscroll-top").on("click", scrollToTop);
-
-  function scrollToTop() {
-    verticalOffset = typeof verticalOffset != "undefined" ? verticalOffset : 0;
-    element = $("body");
-    offset = element.offset();
-    offsetTop = offset.top;
-    $("html, body")
-      .animate({ scrollTop: offsetTop }, 600, "linear")
-      .animate({ scrollTop: 25 }, 200)
-      .animate({ scrollTop: 0 }, 150)
-      .animate({ scrollTop: 0 }, 50);
-  }
-</script>
 {% endblock %}
