--- a/app/templates/shared/base.html
+++ b/app/templates/shared/base.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{% block title %} {% endblock %}</title>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/external.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/base.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/external.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/sidebar.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/navbar.min.css') }}"
+    />
 
     {% block css %} {% endblock %}
   </head>
@@ -21,9 +33,10 @@
     <!-- Botão volta ao topo -->
     <div class="smoothscroll-top">
       <span class="scroll-top-inner">
-          <i class="fa fa-2x fa-arrow-circle-up"></i>
+        <i class="fa fa-2x fa-arrow-circle-up"></i>
       </span>
     </div>
+
     <!-- Javascript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -42,7 +55,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="{{ url_for('static', filename='js/jQuery.print.min.js') }}"></script>
-    <!-- <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"6f4a40e75f25e084","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.12.0","si":100}' crossorigin="anonymous"></script> -->
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+
     {% block js %} {% endblock %}
   </body>
 </html>
