--- a/app/templates/shared/navbar.html
+++ b/app/templates/shared/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg principal navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{{ url_for('webapp.index') }}">
       <img class="logo" src="{{ url_for('static', filename='img/logo.png') }}" alt="Home Office">
       <span class="texto">Home Office</span>
     </a>
@@ -21,33 +21,33 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 snip1189">
 
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" onclick="troca_css('static/css/classico.css');">
+            <a class="nav-link active" aria-current="page" href="#" onclick="troca_css('static/css/classico.min.css');">
                 <i class="fa-solid fa-chess-knight"></i> Clássico
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#" onclick="troca_css('static/css/metal.css');">
+            <a class="nav-link" href="#" onclick="troca_css('static/css/metal.min.css');">
                 <i class="fa-solid fa-weight-hanging"></i> Metal
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#" onclick="troca_css('static/css/elegante.css');">
+            <a class="nav-link" href="#" onclick="troca_css('static/css/elegante.min.css');">
                 <i class="fa-brands fa-sketch"></i> Elegante
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#" onclick="troca_css('static/css/design.css');">
+            <a class="nav-link" href="#" onclick="troca_css('static/css/design.min.css');">
                 <i class="fa-solid fa-compass-drafting"></i> Design
             </a>
         </li>
         
         <li class="nav-item"></li>
-            <a class="nav-link" href="#" onclick="troca_css('static/css/saude.css');">
+            <a class="nav-link" href="#" onclick="troca_css('static/css/saude.min.css');">
                 <i class="fa-solid fa-user-doctor"></i> Saúde
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#" onclick="troca_css('static/css/anime.css');">
+            <a class="nav-link" href="#" onclick="troca_css('static/css/anime.min.css');">
                 <i class="fa-solid fa-dragon"></i> Anime
             </a>
         </li>
@@ -58,8 +58,8 @@
         <button class="dropbtn"><i class="fa-solid fa-users-gear"></i>  Configurações</button>
         <div class="dropdown-content">
           <a href="#" class="closebtn" onclick="print()"><i class="fa-solid fa-print"></i> Imprimir</a>
-          <a href="#"><i class="fa-solid fa-user-plus"></i> Novo Curriculo</a>
-          <a href="#"><i class="fa-solid fa-users-line"></i> Lista de Curriculos</a>
+          <!-- <a href="#"><i class="fa-solid fa-user-plus"></i> Novo Curriculo</a> -->
+          <a href="{{ url_for('webapp.list') }}"><i class="fa-solid fa-users-line"></i> Lista de Curriculos</a>
         </div>
       </div>
 
