--- a/app/templates/shared/sidebar.html
+++ b/app/templates/shared/sidebar.html
@@ -1,8 +1,8 @@
 <a href="#" class="closebtn" onclick="print()"> <i class="fa-solid fa-print"></i></a>
-<a href="#" onclick="troca_css('static/css/classico.css');">Clássico</a>
-<a href="#" onclick="troca_css('static/css/metal.css');">Metal</a>
-<a href="#" onclick="troca_css('static/css/elegante.css');">Elegante</a>
-<a href="#" onclick="troca_css('static/css/design.css');">Design</a>
-<a href="#" onclick="troca_css('static/css/saude.css');">Saúde</a>
-<a href="#" onclick="troca_css('static/css/anime.css');">Anime</a>
+<a href="#" onclick="troca_css('static/css/classico.min.css');">Clássico</a>
+<a href="#" onclick="troca_css('static/css/metal.min.css');">Metal</a>
+<a href="#" onclick="troca_css('static/css/elegante.min.css');">Elegante</a>
+<a href="#" onclick="troca_css('static/css/design.min.css');">Design</a>
+<a href="#" onclick="troca_css('static/css/saude.min.css');">Saúde</a>
+<a href="#" onclick="troca_css('static/css/anime.min.css');">Anime</a>
 
