Ajustando para nova estrutura

--- a/app/static/scss/layouts/classico.scss
+++ b/app/static/scss/layouts/classico.scss
@@ -26,6 +26,9 @@
   position: relative;
 }
 
+.profissional {
+  padding: 1rem 0 0 1.5rem;
+}
 .nome {
   background-color: #1b7ea2;
   opacity: 0.7;
