--- a/app/templates/curriculo/list.html
+++ b/app/templates/curriculo/list.html
@@ -3,6 +3,9 @@
 {% block title %}Lista de Currículos {% endblock%}
 
 {% block css %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" />
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/list.min.css') }}" />
 {% endblock %}
 
@@ -13,7 +16,7 @@
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Currículos Cadastrados</h1>
                 </div>
-                <div class="table-responsive">
+                <div class="d-flexnavbar.minnavbar.mins">
 
                     {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
                     <div class="alert alert-success" role="alert">
@@ -22,7 +25,7 @@
                     {% endfor %} {% endif %} {% endwith %}
 
                     <a href="#" class="btn btn-dark add_new">Adicionar Novo Currículo</a>
-                    <table class="table table-striped table-sm zui-table zui-table-rounded">
+                    <table id="tblcurriculo" class="table table-striped table-sm">
                         <thead class="thead-dark">
                             <tr>
                                 <th>Categoria</th>
@@ -52,5 +55,20 @@
 
 
 {% block js %}
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
 
+
+
+
+<script>
+    $(document).ready(function() {
+        $('#tblcurriculo').DataTable({
+            language: {
+                url: "{{ url_for('static', filename='plugins/pt-BR.json') }}" 
+                //'../../../app/plugins/pt-BR.json'
+            }
+        });
+    });
+</script>
 {% endblock %}
