--- a/app/templates/shared/navbar.html
+++ b/app/templates/shared/navbar.html
@@ -57,9 +57,9 @@
       <div class="dropdown" style="float: right">
         <button class="dropbtn"><i class="fa-solid fa-users-gear"></i>  Configurações</button>
         <div class="dropdown-content">
-          <a href="#" class="closebtn" onclick="print()"><i class="fa-solid fa-print"></i> Imprimir</a>
+          <a href="#" class="closebtn" onclick="print()"><i class="fa-solid fa-print"></i>Imprimir</a>
           <!-- <a href="#"><i class="fa-solid fa-user-plus"></i> Novo Curriculo</a> -->
-          <a href="{{ url_for('webapp.list') }}"><i class="fa-solid fa-users-line"></i> Lista de Curriculos</a>
+          <a href="{{ url_for('webapp.list') }}"><i class="fa-solid fa-users"></i>Lista de Curriculos</a>
         </div>
       </div>
 
