--- a/app/templates/curriculo/curriculo.html
+++ b/app/templates/curriculo/curriculo.html
@@ -376,5 +376,6 @@
 {% endblock %} 
 
 {% block js %}
+       <script src="{{ url_for('static', filename='js/jQuery.print.min.js') }}"></script>
 
 {% endblock %}
