--- a/app/templates/curriculo/curriculo.html
+++ b/app/templates/curriculo/curriculo.html
@@ -178,7 +178,7 @@
               class="img-fluid"
               alt="bom"
             />
-            <i class="fas fa-check fa-xs check"></i>Docker, NodeJS, MongoDB,
+            <i class="fas fa-check fa-xs check"></i>Python, Flask, Docker, NodeJS, MongoDB,
 
           </li>
           <li>
