--- a/app/static/scss/layouts/classico.scss
+++ b/app/static/scss/layouts/classico.scss
@@ -1,4 +1,6 @@
-
+i {
+  margin-right: .5rem;
+}
 .header span {
   color: #666;
   font-family: 'PT Sans Narrow', sans-serif;
@@ -66,7 +68,7 @@
 
 .caracteristicas {
   position: relative;
-  padding: 2rem 0 0 1rem;
+  padding: 0rem 0 0 1rem;
   margin-bottom: 0 !important;
 }
 
@@ -88,7 +90,7 @@
 
 .sobre {
   position: relative;
-  padding: 3rem 0 0 1rem;
+  padding: 0rem 0 0 1rem;
   margin-bottom: 0 !important;
 }
 
@@ -99,7 +101,7 @@
 
 .contato {
   position: relative;
-  padding: 3rem 0 0 1rem;
+  padding: 0rem 0 0 1rem;
   margin-bottom: 0 !important;
 }
 
@@ -123,7 +125,7 @@
 
 .hobbies {
   position: relative;
-  padding: 3rem 0 0 1rem;
+  padding: 0rem 0 0 1rem;
   color: #666;
 }
 
