--- a/app/static/scss/shared/print.scss
+++ b/app/static/scss/shared/print.scss
@@ -12,7 +12,9 @@
     margin: 0px !important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
+.smoothscroll-top {
+    display: none;
+}
 @page {
     margin: 1rem 1rem 0 1rem;
 }
