--- a/app/static/scss/layouts/elegante.scss
+++ b/app/static/scss/layouts/elegante.scss
@@ -14,6 +14,9 @@
   color: white;
 }
 
+.main .pessoal i {
+  color: #FFF;
+}
 .main .pessoal {
   background-color: #666 !important;
   float: right;
@@ -157,7 +160,6 @@ ul {
 .hobbies {
   position: relative;
   padding: 3rem 0 0 1rem;
-  color: #666;
 }
 
 .hobbies .descricao .row div {
