--- a/app/static/scss/layouts/metal.scss
+++ b/app/static/scss/layouts/metal.scss
@@ -10,6 +10,9 @@
   color: white;
 }
 
+.main .pessoal i {
+  color: #FFF;
+}
 .main .pessoal {
   background-color: #666 !important;
   float: right;
@@ -137,7 +140,6 @@
 .hobbies {
   position: relative;
   padding: 3rem 0 0 1rem;
-  color: #666;
 }
 
 .hobbies .descricao .row div {
