--- a/app/static/scss/shared/navbar.scss
+++ b/app/static/scss/shared/navbar.scss
@@ -1,4 +1,14 @@
-
+/* --------------------------------------------------------------
+ *
+ *     ██████ ███████ ███████     ██████   █████  ███████ ███████ 
+ *    ██      ██      ██          ██   ██ ██   ██ ██      ██      
+ *    ██      ███████ ███████     ██████  ███████ ███████ █████   
+ *    ██           ██      ██     ██   ██ ██   ██      ██ ██      
+ *     ██████ ███████ ███████     ██████  ██   ██ ███████ ███████ 
+ *                                                                
+ *        [- Font modified May 6, 2022 by marcelo maia -]
+ *                                           
+ * ------------------------------------------------------------ */
 .navbar-brand  {
   /* border: solid 1px #fff; */
   margin-right: 0;
