--- a/app/static/scss/shared/external.scss
+++ b/app/static/scss/shared/external.scss
@@ -1,6 +1,20 @@
+/* --------------------------------------------------------------
+ *
+ *     ██████ ███████ ███████     ██████   █████  ███████ ███████ 
+ *    ██      ██      ██          ██   ██ ██   ██ ██      ██      
+ *    ██      ███████ ███████     ██████  ███████ ███████ █████   
+ *    ██           ██      ██     ██   ██ ██   ██      ██ ██      
+ *     ██████ ███████ ███████     ██████  ██   ██ ███████ ███████ 
+ *                                                                
+ *        [- Font modified May 6, 2022 by marcelo maia -]
+ *                                           
+ * ------------------------------------------------------------ */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css");
 @import url("https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css");
 
+// Google Fonts
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&display=swap');
