--- a/app/static/scss/shared/sidebar.scss
+++ b/app/static/scss/shared/sidebar.scss
@@ -1,3 +1,14 @@
+/* --------------------------------------------------------------
+ *
+ *     ██████ ███████ ███████     ██████   █████  ███████ ███████ 
+ *    ██      ██      ██          ██   ██ ██   ██ ██      ██      
+ *    ██      ███████ ███████     ██████  ███████ ███████ █████   
+ *    ██           ██      ██     ██   ██ ██   ██      ██ ██      
+ *     ██████ ███████ ███████     ██████  ██   ██ ███████ ███████ 
+ *                                                                
+ *        [- Font modified May 6, 2022 by marcelo maia -]
+ *                                           
+ * ------------------------------------------------------------ */
 .sidenav {
     height: 100%;
     width: 160px;
