--- a/app/templates/curriculo/curriculo.html
+++ b/app/templates/curriculo/curriculo.html
@@ -205,7 +205,7 @@
               class="img-fluid"
               alt="excelente"
             />
-            <i class="fas fa-check fa-xs check"></i>Especialista em front-end, UX
+            <i class="fas fa-check fa-xs check"></i>Especialista em front-end, UX, CSS, Sass
             Design
           </li>
           <li>
