--- a/app/templates/curriculo/curriculo.html
+++ b/app/templates/curriculo/curriculo.html
@@ -205,8 +205,8 @@
               class="img-fluid"
               alt="excelente"
             />
-            <i class="fas fa-check fa-xs check"></i>Especialista em front-end, UX, CSS, Sass
-            Design
+            <i class="fas fa-check fa-xs check"></i>Especialista em front-end, UX Design, CSS, Sass
+            
           </li>
           <li>
             <img
